use relative paths for files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Where is Davis Editor</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div id="app">
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    <script src="/oauth.js"></script>
-    <script src="/script.js"></script>
+    <script src="./oauth.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
